--- a/B11A1--ASSIGNMENT/index.html
+++ b/B11A1--ASSIGNMENT/index.html
@@ -93,6 +93,19 @@
                     <h5 class="Quote-sub-title">Chief Adviser of the People's Republic of Bangladesh</h5>
              </div>
       </section>
+      <!-- start news -->
+       <section class="news">
+        <h1 class="news-title">Recent News</h1>
+        <p class="news-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability.
+             With initiatives in,<br>renewable energy, digital transformation,
+             and robust infrastructure, the country is set to become a global model of development.</p>
+             <div class="news-1">
+                <div class="news-b-left">
+                    <img class="news-img" src="../assets/satelite.png" alt="">
+                </div>
+                
+             </div>
+       </section>
    </main>
 </body>
 </html>
