--- a/B11A1--ASSIGNMENT/index.html
+++ b/B11A1--ASSIGNMENT/index.html
@@ -103,9 +103,51 @@
                 <div class="news-b-left">
                     <img class="news-img" src="../assets/satelite.png" alt="">
                 </div>
-                
+                <div class="news-b-right">
+                    <h1 class="news-item-title">Bangladesh Launches New Satellite</h1>
+                    <img class="news-item-img" src="../assets/al-jazeera.png" alt="">
+                    <p class="news-item-time">Date: 05/01/2025| Time:10:15</p>
+                    <p class="news-item-dick">Not until the creation and maintenance of decent conditions of life for all people are recognized and <br>
+                         accepted as a common obligation of all people and all countries—not until then shall we,<br>
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button class="news-btn">Read More</button>
+                </div>
+             </div>
+             <div class="news-1">
+                <div class="news-b-right">
+                    <h1 class="news-item-title">Bangladesh Launches New Satellite</h1>
+                    <img class="news-item-img" src="../assets/al-jazeera.png" alt="">
+                    <p class="news-item-time">Date:Date: 05/01/2025| Time:10:15</p>
+                    <p class="news-item-dick">Not until the creation and maintenance of decent conditions of life for all people are recognized and <br>
+                         accepted as a common obligation of all people and all countries—not until then shall we,<br>
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button class="news-btn">Read More</button>
+                </div>
              </div>
        </section>
+       <!-- start -->
+        <section class="Donate">
+            <h1 class="donate-title">Donate Today</h1>
+            <p class="donate-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability.
+                 With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+                 <div class="donate-item">
+                    <div class="donate-item-list">
+                        <h4>100 Taka</h4>
+                    </div>
+                    <div class="donate-item-list active">
+                        <h4>200 Taka</h4>
+                    </div>
+                    <div class="donate-item-list">
+                        <h4>500 Taka</h4>
+                    </div>
+                    <div class="donate-item-list">
+                        <h4>1000 Taka</h4>
+                    </div>
+                 </div>
+                 <input type="text" placeholder="Other Amount (Taka)">
+                 <br>
+                 <button class="donate-btn">Done Now</button>
+        </section>
    </main>
 </body>
 </html>
