--- a/B11A1--ASSIGNMENT/index.html
+++ b/B11A1--ASSIGNMENT/index.html
@@ -110,7 +110,7 @@
                     <p class="news-item-dick">Not until the creation and maintenance of decent conditions of life for all people are recognized and <br>
                          accepted as a common obligation of all people and all countries—not until then shall we,<br>
                         with a certain degree of justification, be able to speak of humankind as civilized</p>
-                        <button class="news-btn">Read More</button>
+                        <button class="news-btn">Read More..</button>
                 </div>
              </div>
              <div class="news-1">
@@ -122,6 +122,9 @@
                          accepted as a common obligation of all people and all countries—not until then shall we,<br>
                         with a certain degree of justification, be able to speak of humankind as civilized</p>
                         <button class="news-btn">Read More</button>
+                </div>
+                <div class="news-b-left">
+                    <img class="news-img" src="../assets/satelite.png" alt="">
                 </div>
              </div>
        </section>
@@ -148,6 +151,32 @@
                  <br>
                  <button class="donate-btn">Done Now</button>
         </section>
-   </main>
+        <!-- start Subscribe Newsletter -->
+         <section class="newsletter">
+            <div class="news-letter-containar">
+                <h2 class="newsletter-title">Subscribe Newsletter</h2>
+                <p class="newsletter-description" style="margin-bottom:10px;">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br>
+                     technology, promoting inclusive growth.</p>
+                     <input type="email" placeholder="Enter your email here">
+                     <button class="subscribe-btn">Subscribe</button>
+                     <p class="newsletter-spam">We promise not to spam you!</p>
+            </div>
+         </section>
+            </main>
+   <footer class="footer">
+    <footer class="footer">
+        <div class="footer-containar">
+            <div class="information">
+                <h4 class="info-des">Bangladesh 2.0</h4>
+            </div>
+         </div>
+        <hr class="horz">
+        <div class="footer-icon">
+            <img src="../assets/facebook.png" alt="">
+            <img src="../assets/instagram.png" alt="">
+            <img src="../assets/x.png" alt="">
+        </div>
+    </footer>
+   </footer>
 </body>
 </html>
